--- a/gifts/templates/gifts/base.html
+++ b/gifts/templates/gifts/base.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="/static/css/style.css">
 </head>
-<body class="d-flex flex-column min-vh-100" data-bs-theme="dark">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top shadow-sm">
+<body class="d-flex flex-column min-vh-100">
+    <nav class="navbar navbar-expand-lg sticky-top shadow-sm">
         <div class="container">
             <a href="{% url 'home' %}" class="navbar-brand">
                 <i class="fas fa-gift text-success me-2"></i>Gift Tracker
